# segmentation

./: .gitignore  README.md  data.yaml  pyproject.toml  requirements.txt  segment.py  train.py
images_labels/: sample.txt
notebooks/: auto_annotate.ipynb  label.txt  mask_multiple_image.ipynb  segment_by_yolov8.ipynb  sumi.txt  sumi2.txt  sumi3.txt
notebooks/vision_ai/: ocr.ipynb
src/sumi_detection/: annotate.py  create_dataset.py
